RESOLVED FIXED237195
IPC_TESTING_API MessageArgumentDescriptions.cpp is slow to compile
https://bugs.webkit.org/show_bug.cgi?id=237195
Summary IPC_TESTING_API MessageArgumentDescriptions.cpp is slow to compile
Kimmo Kinnunen
Reported 2022-02-25 03:14:25 PST
IPC_TESTING_API MessageArgumentDescriptions.cpp is slow to compile
Attachments
Patch (76.43 KB, patch)
2022-02-25 03:27 PST, Kimmo Kinnunen
no flags
Patch (76.75 KB, patch)
2022-02-25 03:45 PST, Kimmo Kinnunen
no flags
Patch (76.80 KB, patch)
2022-02-25 03:54 PST, Kimmo Kinnunen
no flags
Patch (76.80 KB, patch)
2022-02-25 03:59 PST, Kimmo Kinnunen
no flags
Patch for landing (77.31 KB, patch)
2022-03-02 04:58 PST, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2022-02-25 03:27:59 PST
Kimmo Kinnunen
Comment 2 2022-02-25 03:45:49 PST
Kimmo Kinnunen
Comment 3 2022-02-25 03:54:18 PST
Kimmo Kinnunen
Comment 4 2022-02-25 03:59:15 PST
EWS
Comment 5 2022-02-28 01:12:02 PST
Committed r290588 (247866@main): <https://commits.webkit.org/247866@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453193 [details].
Radar WebKit Bug Importer
Comment 6 2022-02-28 01:13:18 PST
Kimmo Kinnunen
Comment 7 2022-02-28 05:32:18 PST
compile fix in bug 237268
Robert Jenner
Comment 8 2022-03-01 17:53:36 PST
Reverted r290588 for reason: Patch r290588 caused ASAN build to fail on macOS Committed r290714 (247961@trunk): <https://commits.webkit.org/247961@trunk>
Kimmo Kinnunen
Comment 9 2022-03-02 04:58:29 PST
Created attachment 453590 [details] Patch for landing
EWS
Comment 10 2022-03-02 09:01:00 PST
Committed r290732 (247979@main): <https://commits.webkit.org/247979@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453590 [details].
Kimmo Kinnunen
Comment 11 2022-03-03 01:51:26 PST
*** Bug 237351 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.